Series of changes

--- a/modules/nagios/files/configs/CentOS/nagios.cfg
+++ b/modules/nagios/files/configs/CentOS/nagios.cfg
@@ -399,7 +399,7 @@ service_reaper_frequency=10
 # service check results before they are processed.  As check results
 # are processed by the daemon, they are removed from the buffer.  
 
-check_result_buffer_slots=4096
+#check_result_buffer_slots=4096
 
 
 
