--- a/modules/nagios/templates/nrpe.cfg
+++ b/modules/nagios/templates/nrpe.cfg
@@ -4,7 +4,7 @@
 ###############################################################################
 #
 server_port=5666
-allowed_hosts=127.0.0.1,50.57.85.55
+allowed_hosts=127.0.0.1,50.57.45.152
 nrpe_user=<%= nagiosuser %>
 nrpe_group=<%= nagiosgroup %>
 dont_blame_nrpe=0
@@ -16,4 +16,5 @@ command_timeout=600
 #command[check_zombie_procs]=<%= sudopath %>/sudo <%= pluginsdir %>/check_procs -w 100 -c 150 -s Z -t 60
 #command[check_total_procs]=<%= sudopath %>/sudo <%= pluginsdir %>/check_procs -N cronolog -w 1500 -c 2000 -t 60
 #command[check_postfix]=<%= pluginsdir %>/check_mailq -w 200 -c 300 -M postfix
+command[check_users]=<%= pluginsdir %>/check_users -w 200 -c 300
 #
