Modified more files Add ufw module

--- a/modules/nagios/templates/nrpe.cfg
+++ b/modules/nagios/templates/nrpe.cfg
@@ -11,10 +11,11 @@ dont_blame_nrpe=0
 debug=0
 command_timeout=600
 #
-#command[check_dummy]=<%= pluginsdir %>/check_dummy 0
-#command[check_load]=<%= pluginsdir %>/check_load -w 15,20,25 -c 30,35,40
-#command[check_zombie_procs]=<%= sudopath %>/sudo <%= pluginsdir %>/check_procs -w 100 -c 150 -s Z -t 60
-#command[check_total_procs]=<%= sudopath %>/sudo <%= pluginsdir %>/check_procs -N cronolog -w 1500 -c 2000 -t 60
+command[check_dummy]=<%= pluginsdir %>/check_dummy 0
+command[check_load]=<%= pluginsdir %>/check_load -w 15,20,25 -c 30,35,40
+command[check_zombie_procs]=<%= sudopath %>/sudo <%= pluginsdir %>/check_procs -w 100 -c 150 -s Z -t 60
+command[check_total_procs]=<%= sudopath %>/sudo <%= pluginsdir %>/check_procs -w 1500 -c 2000 -t 60
 #command[check_postfix]=<%= pluginsdir %>/check_mailq -w 200 -c 300 -M postfix
-command[check_users]=<%= pluginsdir %>/check_users -w 200 -c 300
-#
+command[check_users]=<%= pluginsdir %>/check_users -w 5 -c 10
+command[check_hda1]=/usr/lib/nagios/plugins/check_disk -w 20% -c 10% -p /dev/hda1
+
